# Polynomial-Trajectory-Generation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  setup.py
include/mav_trajectory_generation/: clog.h  io.h  polynomial.h  polynomial_optimization_nonlinear.h  trajectory.h  trajectory_sampling.h
include/mav_trajectory_generation/impl/: polynomial_optimization_nonlinear_impl.h
include/poly_traj/: trajectory_generator.h
src/: io.cpp  pybind.cpp  trajectory_generator.cpp  trajectory_sampling.cpp  vertex.cpp
